# china-regions-content-bot

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  aws-cn-tool.sh  batch_validate.py  blogs.json  blogs_feed_test.sh  common-utils.sh  content-convert.py  main.py  main.sh  markdown_converter.py  pyproject.toml  requirements.txt  run.py  test.md  unavailable_services.txt  validate.sh
.github/workflows/: update-reports.yml
.kiro/agents/: china-validator-prompt-test.md  china-validator-prompt.md  china-validator.json  inject-validation-context.sh
.kiro/settings/: mcp.json
.kiro/steering/: product.md
docs/: index.html  reports.json
docs/assets/: app.js
docs/reports/a_journey_with_aws_cloud_institute_fd4ac927/: report.md  source.md
docs/reports/accelerate_ai_development_with_amazon_bedrock_api_keys_82d0f909/: report.md  source.md
docs/reports/accelerate_analytics_and_ai_innovation_with_the_next_generation_of_amazon_sagemaker_cb3d557c/: report.md  source.md
docs/reports/accelerate_aws_well_architected_reviews_with_generative_ai_857bc348/: report.md  source.md
docs/reports/accelerate_development_with_the_amazon_bedrock_agentcore_mcpserver_b71ee059/: report.md  source.md
docs/reports/accelerate_your_aws_migration_9a6e4b13/: report.md  (+1 more)
scripts/: __init__.py  aws_blog_fetcher.py  batch_validate.py  content_convert.py  generate_reports_json.py  utils.py  validate.py
src/: basic-validator.sh  common-utils.sh  content-converter.sh  converter.py  deep-validator.sh  project-validator.sh  tutorial-validator.sh  unavailable_services.txt  validator.py
(+538 files in other folders)
