[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws_china_validator"
version = "0.1.0"
description = "AWS China Region Content Validation Tool"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "AWS China Team"}
]
dependencies = [
    "colorama>=0.4.4",
    "markdownify>=1.1.0",
    "python-dotenv>=0.19.0",
]

[project.scripts]
aws-china-validator = "main:main"