[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws_china_validator"
version = "0.1.0"
description = "AWS China Region Content Validation Tool"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "AWS China Team"}
]
dependencies = [
    "markdownify>=1.1.0",
    "beautifulsoup4>=4.9.0",
    "requests>=2.25.0"
]

[project.scripts]
aws-china-validator = "main:main"